settings for postgres Database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/ksc
+spring.datasource.username=postgres
+spring.datasource.password=jncjnc
+spring.datasource.driver-class-name=org.postgresql.Driver
 
+# Specify JPA/Hibernate settings
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
