--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/ksc
 spring.datasource.username=postgres
-spring.datasource.password=jncjnc
+spring.datasource.password=
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Specify JPA/Hibernate settings
