Private Key added into certificate

--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,20 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcprov-jdk15on</artifactId>
+			<version>1.68</version> <!-- Use the latest version -->
+		</dependency>
+
+		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcpkix-jdk15on</artifactId>
+			<version>1.68</version> <!-- Use the latest version -->
+		</dependency>
+		<!-- Thanks for using https://jar-download.com -->
+
+
 		<!--Test dependencies -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
