--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,7 @@ replay_pid*
 /.idea/.gitignore
 /.idea/
 /target/
+/modules/certificate-connect/certificate-connect.iml
+/modules/config-rest-api/config-rest-api.iml
+/modules/certificate-connect/target/
+/modules/config-rest-api/target/
