--- a/modules/config-rest-api/pom.xml
+++ b/modules/config-rest-api/pom.xml
@@ -17,25 +17,16 @@
 		<java.version>21</java.version>
 	</properties>
 	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<scope>runtime</scope>
-		</dependency>
 
 		<dependency>
 			<groupId>com.lichbalab.ksc</groupId>
-			<artifactId>certificate-connect</artifactId>
+			<artifactId>certificate</artifactId>
 			<version>${project.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
 		<!--Test dependencies -->
@@ -63,8 +54,6 @@
 		<dependency>
 			<groupId>org.testcontainers</groupId>
 			<artifactId>testcontainers</artifactId>
-			<version>1.19.1</version>
-			<scope>test</scope>
 		</dependency>
 
 		<!-- Testcontainers JUnit Jupiter Dependency -->
@@ -77,8 +66,6 @@
 		<dependency>
 			<groupId>org.testcontainers</groupId>
 			<artifactId>postgresql</artifactId> <!-- or the appropriate database module -->
-			<version>1.19.1</version>
-			<scope>test</scope>
 		</dependency>
 
 	</dependencies>
