--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,12 @@
     <dependencyManagement>
         <dependencies>
 
+            <dependency>
+                <groupId>org.mapstruct</groupId>
+                <artifactId>mapstruct</artifactId>
+                <version>1.5.5.Final</version>
+            </dependency>
+
             <!-- Testcontainers -->
             <dependency>
                 <groupId>org.testcontainers</groupId>
