--- a/modules/certificate/src/main/resources/application.properties
+++ b/modules/certificate/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+#logging.level.org.springframework=DEBUG
