CertificateService JUnit tests

--- a/modules/certificate/pom.xml
+++ b/modules/certificate/pom.xml
@@ -15,6 +15,11 @@
     <dependencies>
 
         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.lichbalab.ksc</groupId>
             <artifactId>certificate-connect</artifactId>
             <version>${project.version}</version>
@@ -92,12 +97,6 @@
                     </annotationProcessorPaths>
                 </configuration>
             </plugin>
-<!--
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
--->
         </plugins>
     </build>
 
