--- a/modules/config-rest-api/pom.xml
+++ b/modules/config-rest-api/pom.xml
@@ -68,6 +68,13 @@
 			<artifactId>postgresql</artifactId> <!-- or the appropriate database module -->
 		</dependency>
 
+		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>rest-assured</artifactId>
+			<version>5.3.2</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
