--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <mapstruct.version>1.5.5.Final</mapstruct.version>
+        <testcontainers.version>1.19.1</testcontainers.version>
     </properties>
 
     <modules>
@@ -49,7 +50,7 @@
             <dependency>
                 <groupId>org.testcontainers</groupId>
                 <artifactId>testcontainers</artifactId>
-                <version>1.19.1</version>
+                <version>${testcontainers.version}</version>
                 <scope>test</scope>
             </dependency>
 
@@ -57,7 +58,7 @@
                 <groupId>org.testcontainers</groupId>
                 <artifactId>postgresql</artifactId> <!-- or the appropriate database module -->
                 <version>1.19.1</version>
-                <scope>test</scope>
+                <scope>${testcontainers.version}</scope>
             </dependency>
 
         </dependencies>
