properties file in rest-api module

--- a/modules/config-rest-api/src/main/resources/application.properties
+++ b/modules/config-rest-api/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/ksc
-spring.datasource.username=postgres
-spring.datasource.password=
-spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://localhost:5432/ksc
+#spring.datasource.username=postgres
+#spring.datasource.password=
+#spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Specify JPA/Hibernate settings
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
 #logging.level.org.springframework=DEBUG
