Liquibase integration for DB migrations

--- a/modules/certificate/src/main/resources/config/application.properties
+++ b/modules/certificate/src/main/resources/config/application.properties
@@ -1,10 +1,15 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/ksc
 spring.datasource.username=postgres
-spring.datasource.password=
+spring.datasource.password=jncjnc
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Specify JPA/Hibernate settings
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+hibernate.jdbc.use_streams_for_binary=true
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-#logging.level.org.springframework=DEBUG
+hibernate.order_inserts=true
+spring.jpa.hibernate.ddl-auto=validate
+
+# Specify Liquibase settings
+spring.liquibase.change-log=classpath:/db-scripts/changelog.xml
+logging.level.liquibase=INFO
