--- a/modules/certificate/pom.xml
+++ b/modules/certificate/pom.xml
@@ -11,6 +11,9 @@
     </parent>
 
     <artifactId>certificate</artifactId>
+    <properties>
+        <java.version>21</java.version>
+    </properties>
 
     <dependencies>
 
@@ -38,6 +41,12 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
             <scope>runtime</scope>
         </dependency>
 
