--- a/pom.xml
+++ b/pom.xml
@@ -57,8 +57,8 @@
             <dependency>
                 <groupId>org.testcontainers</groupId>
                 <artifactId>postgresql</artifactId> <!-- or the appropriate database module -->
-                <version>1.19.1</version>
-                <scope>${testcontainers.version}</scope>
+                <version>${testcontainers.version}</version>
+                <scope>test</scope>
             </dependency>
 
         </dependencies>
