Repository tests refactoring

--- a/modules/certificate/src/main/resources/config/application.properties
+++ b/modules/certificate/src/main/resources/config/application.properties
@@ -1,14 +1,18 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/ksc
 spring.datasource.username=postgres
-spring.datasource.password=jncjnc
+spring.datasource.password=
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Specify JPA/Hibernate settings
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 hibernate.jdbc.use_streams_for_binary=true
 spring.jpa.show-sql=true
-hibernate.order_inserts=true
+#hibernate.order_inserts=true
 spring.jpa.hibernate.ddl-auto=validate
+
+# Pool Configuration
+#spring.datasource.hikari.connectionTimeout=20000
+#spring.datasource.hikari.maximumPoolSize=5
 
 # Specify Liquibase settings
 spring.liquibase.change-log=classpath:/db-scripts/changelog.xml
