--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: '3'
 
 services:
   # Application service for config-rest-api
@@ -8,10 +8,13 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8080:8080"
+    restart: always
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/db_name
-      - SPRING_DATASOURCE_USERNAME=db_user
-      - SPRING_DATASOURCE_PASSWORD=db_pass
+      DB_HOST: postgres
+      DB_PORT: 5432
+      DB_NAME: ksc
+      DB_USERNAME: postgres
+      DB_PASSWORD: admin
     depends_on:
       - postgres
 
@@ -19,9 +22,9 @@ services:
   postgres:
     image: postgres:16-alpine
     environment:
-      POSTGRES_DB: db_name
-      POSTGRES_USER: db_user
-      POSTGRES_PASSWORD: db_pass
+      POSTGRES_DB: ksc
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: admin
     volumes:
       - pgdata:/var/lib/postgresql/data
 
