--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,7 @@ replay_pid*
 /modules/certificate/target/
 /modules/certificate/certificate.iml
 /ksc.iml
+/modules/ui/src/main/ui/node/
+/modules/ui/src/main/ui/node_modules/
+/modules/ui/src/main/ui/build/
+/modules/ui/target/
