--- a/modules/certificate/src/main/resources/config/application.properties
+++ b/modules/certificate/src/main/resources/config/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:ksc}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.username=${DB_USERNAME:postgres}
+spring.datasource.password=${DB_PASSWORD:jncjnc}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Specify JPA/Hibernate settings
