--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   # Application service for config-rest-api
-  config-rest-api:
+  ksc:
     build:
       context: .
       dockerfile: Dockerfile
