--- a/modules/ui/src/main/ui/package.json
+++ b/modules/ui/src/main/ui/package.json
@@ -1,9 +1,11 @@
-
 {
   "name": "ui",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.18",
     "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
