--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
     </properties>
 
     <modules>
-        <module>modules/config-rest-api</module>
+        <module>modules/rest-api</module>
         <module>modules/certificate-connect</module>
         <module>modules/certificate</module>
         <module>modules/ui</module>
