--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
         <module>modules/certificate-connect</module>
         <module>modules/certificate</module>
         <module>modules/ui</module>
+        <module>modules/ksc-document</module>
     </modules>
 
     <dependencyManagement>
