--- a/modules/ksc-document/pom.xml
+++ b/modules/ksc-document/pom.xml
@@ -21,8 +21,19 @@
     <dependencies>
 
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.lichbalab.ksc</groupId>
             <artifactId>certificate-connect</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.lichbalab.ksc</groupId>
+            <artifactId>certificate</artifactId>
             <version>${project.version}</version>
         </dependency>
 
