--- a/modules/ksc-document/pom.xml
+++ b/modules/ksc-document/pom.xml
@@ -13,6 +13,7 @@
     <artifactId>ksc-document</artifactId>
 
     <properties>
+        <java.version>21</java.version>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -78,6 +79,7 @@
             <groupId>com.sun.xml.bind</groupId>
             <artifactId>jaxb-impl</artifactId>
             <version>2.3.3</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
