--- a/modules/rest-api/pom.xml
+++ b/modules/rest-api/pom.xml
@@ -26,6 +26,12 @@
 
 		<dependency>
 			<groupId>com.lichbalab.ksc</groupId>
+			<artifactId>ksc-document</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.lichbalab.ksc</groupId>
 			<artifactId>ui</artifactId>
 			<version>${project.version}</version>
 		</dependency>
@@ -39,6 +45,13 @@
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>2.2.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-impl</artifactId>
+			<version>2.3.3</version>
+			<scope>runtime</scope>
 		</dependency>
 
 		<!--Test dependencies -->
