--- a/.gitignore
+++ b/.gitignore
@@ -25,20 +25,16 @@ replay_pid*
 /.idea/.gitignore
 /.idea/
 /target/
-/modules/certificate-connect/certificate-connect.iml
-/modules/config-rest-api/config-rest-api.iml
-/modules/certificate-connect/target/
-/modules/config-rest-api/target/
-/modules/certificate/target/
-/modules/certificate/certificate.iml
 /ksc.iml
-/modules/ui/src/main/ui/node/
-/modules/ui/src/main/ui/node_modules/
-/modules/ui/src/main/ui/build/
-/modules/ui/target/
-/modules/ui/ui.iml
-/modules/config-rest-api/rest-api.iml
-/modules/rest-api/rest-api.iml
-/modules/rest-api/target/
 /modules/ksc-document/ksc-document.iml
 /modules/ksc-document/target/
+/modules/ksc-certificate/ksc-certificate.iml
+/modules/ksc-certificate-connect/ksc-certificate-connect.iml
+/modules/ksc-ui/ksc-ui.iml
+/modules/ksc-ui/target/
+/modules/ksc-rest-api/rest-api.iml
+/modules/ksc-rest-api/target/
+/modules/ksc-certificate-connect/target/
+/modules/ksc-ui/src/main/ui/build/
+/modules/ksc-ui/src/main/ui/node/
+/modules/ksc-ui/src/main/ui/node_modules/
