--- a/modules/ksc-certificate/pom.xml
+++ b/modules/ksc-certificate/pom.xml
@@ -10,7 +10,9 @@
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
-    <artifactId>certificate</artifactId>
+    <artifactId>ksc-certificate</artifactId>
+    <name>KSC Certificate</name>
+
     <properties>
         <java.version>21</java.version>
     </properties>
@@ -24,7 +26,7 @@
 
         <dependency>
             <groupId>com.lichbalab.ksc</groupId>
-            <artifactId>certificate-connect</artifactId>
+            <artifactId>ksc-certificate-connect</artifactId>
             <version>${project.version}</version>
         </dependency>
 
