rename the project

--- a/.gitignore
+++ b/.gitignore
@@ -25,16 +25,15 @@ replay_pid*
 /.idea/.gitignore
 /.idea/
 /target/
-/ksc.iml
-/modules/ksc-document/ksc-document.iml
-/modules/ksc-document/target/
-/modules/ksc-certificate/ksc-certificate.iml
-/modules/ksc-certificate-connect/ksc-certificate-connect.iml
-/modules/ksc-ui/ksc-ui.iml
-/modules/ksc-ui/target/
-/modules/ksc-rest-api/rest-api.iml
-/modules/ksc-rest-api/target/
-/modules/ksc-certificate-connect/target/
-/modules/ksc-ui/src/main/ui/build/
-/modules/ksc-ui/src/main/ui/node/
-/modules/ksc-ui/src/main/ui/node_modules/
+/cmc.iml
+/modules/cmc-rest-api/rest-api.iml
+/modules/cmc-certificate-connect/ksc-certificate-connect.iml
+/modules/cmc-certificate/ksc-certificate.iml
+/modules/cmc-certificate/target/
+/modules/cmc-document/target/
+/modules/cmc-rest-api/target/
+/modules/cmc-ui/target/
+/modules/cmc-ui/src/main/ui/build/
+/modules/cmc-ui/src/main/ui/node/
+/modules/cmc-ui/src/main/ui/node_modules/
+/modules/cmc-document/cmc-document.iml
