--- a/modules/cmc-document/pom.xml
+++ b/modules/cmc-document/pom.xml
@@ -5,13 +5,13 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.lichbalab.ksc</groupId>
-        <artifactId>ksc</artifactId>
+        <artifactId>cmc</artifactId>
         <version>0.0.1-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
-    <artifactId>ksc-document</artifactId>
-    <name>KSC Document</name>
+    <artifactId>cmc-document</artifactId>
+    <name>CMC Document</name>
 
 
     <properties>
@@ -30,13 +30,13 @@
 
         <dependency>
             <groupId>com.lichbalab.ksc</groupId>
-            <artifactId>ksc-certificate-connect</artifactId>
+            <artifactId>cmc-certificate-connect</artifactId>
             <version>${project.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.lichbalab.ksc</groupId>
-            <artifactId>ksc-certificate</artifactId>
+            <artifactId>cmc-certificate</artifactId>
             <version>${project.version}</version>
         </dependency>
 
