--- a/modules/cmc-certificate-connect/pom.xml
+++ b/modules/cmc-certificate-connect/pom.xml
@@ -4,13 +4,13 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.lichbalab.ksc</groupId>
-        <artifactId>ksc</artifactId>
+        <artifactId>cmc</artifactId>
         <version>0.0.1-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
-    <artifactId>ksc-certificate-connect</artifactId>
-    <name>KSC Certificate Connect</name>
+    <artifactId>cmc-certificate-connect</artifactId>
+    <name>CMC Certificate Connect</name>
 
     <properties>
         <java.version>21</java.version>
