--- a/Dockerfile_mvn
+++ b/Dockerfile_mvn
@@ -8,17 +8,17 @@ WORKDIR /ksc
 RUN apk add --no-cache maven
 
 # Copy the entire project source
-COPY pom.xml /ksc/
-COPY modules /ksc/modules/
+COPY pom.xml /cmc/
+COPY modules /cmc/modules/
 
 # Build the entire project
 RUN mvn clean package -Dmaven.test.skip=true
 
 # Set the path to the config-rest-api JAR file
-ARG JAR_FILE=/ksc/modules/ksc-rest-api/target/ksc-rest-api-*.jar
+ARG JAR_FILE=/cmc/modules/cmc-rest-api/target/cmc-rest-api-*.jar
 
 # Copy the config-rest-api JAR file into the image
-RUN cp ${JAR_FILE} /ksc/ksc-rest-api.jar
+RUN cp ${JAR_FILE} /cmc/cmc-rest-api.jar
 
 # Specify the entry point for the application
-ENTRYPOINT ["java","-jar","/ksc/ksc-rest-api.jar"]
+ENTRYPOINT ["java","-jar","/cmc/cmc-rest-api.jar"]
