--- a/modules/cmc-rest-api/pom.xml
+++ b/modules/cmc-rest-api/pom.xml
@@ -37,6 +37,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.lichbalab.ksc</groupId>
+			<artifactId>cmc-shared</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
