--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,5 @@ replay_pid*
 /modules/cmc-shared/target/
 /modules/cmc-certificate-connect/cmc-certificate-connect.iml
 /modules/cmc-shared/cmc-shared.iml
+/modules/cmc-sdk/target/
+/modules/cmc-sdk/cmc-sdk.iml
