--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
         <module>modules/cmc-ui</module>
         <module>modules/cmc-document</module>
         <module>modules/cmc-shared</module>
+        <module>modules/cmc-sdk</module>
     </modules>
 
     <dependencyManagement>
