--- a/modules/cmc-rest-api/pom.xml
+++ b/modules/cmc-rest-api/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.lichbalab.ksc</groupId>
+		<groupId>com.lichbalab.cmc</groupId>
 		<artifactId>cmc</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 		<relativePath>../../pom.xml</relativePath>
@@ -19,25 +19,25 @@
 	<dependencies>
 
 		<dependency>
-			<groupId>com.lichbalab.ksc</groupId>
+			<groupId>com.lichbalab.cmc</groupId>
 			<artifactId>cmc-certificate</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 
 		<dependency>
-			<groupId>com.lichbalab.ksc</groupId>
+			<groupId>com.lichbalab.cmc</groupId>
 			<artifactId>cmc-document</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 
 		<dependency>
-			<groupId>com.lichbalab.ksc</groupId>
+			<groupId>com.lichbalab.cmc</groupId>
 			<artifactId>cmc-ui</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 
 		<dependency>
-			<groupId>com.lichbalab.ksc</groupId>
+			<groupId>com.lichbalab.cmc</groupId>
 			<artifactId>cmc-shared</artifactId>
 			<version>${project.version}</version>
 		</dependency>
