--- a/modules/cmc-ui/pom.xml
+++ b/modules/cmc-ui/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.lichbalab.ksc</groupId>
+        <groupId>com.lichbalab.cmc</groupId>
         <artifactId>cmc</artifactId>
         <version>0.0.1-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
