--- a/modules/cmc-certificate-connect/pom.xml
+++ b/modules/cmc-certificate-connect/pom.xml
@@ -19,6 +19,12 @@
     <dependencies>
 
         <dependency>
+            <groupId>com.lichbalab.cmc</groupId>
+            <artifactId>cmc-shared</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.bouncycastle</groupId>
             <artifactId>bcprov-jdk15on</artifactId>
         </dependency>
