--- a/modules/cmc-sdk/pom.xml
+++ b/modules/cmc-sdk/pom.xml
@@ -22,6 +22,16 @@
     <dependencies>
 
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webflux</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.lichbalab.cmc</groupId>
             <artifactId>cmc-certificate-connect</artifactId>
             <version>${project.version}</version>
