--- a/modules/cmc-rest-api/pom.xml
+++ b/modules/cmc-rest-api/pom.xml
@@ -60,6 +60,11 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+		</dependency>
+
 		<!--Test dependencies -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
