--- a/modules/cmc-ui/src/main/ui/package.json
+++ b/modules/cmc-ui/src/main/ui/package.json
@@ -8,6 +8,7 @@
     "@mui/icons-material": "^5.15.16",
     "@mui/material": "^5.15.16",
     "@mui/system": "^5.15.15",
+    "antd": "^5.17.0",
     "axios": "^1.6.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
