--- a/modules/cmc-certificate/pom.xml
+++ b/modules/cmc-certificate/pom.xml
@@ -31,6 +31,14 @@
         </dependency>
 
         <dependency>
+            <groupId>com.lichbalab.cmc</groupId>
+            <artifactId>cmc-certificate-connect</artifactId>
+            <version>${project.version}</version>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
         </dependency>
