--- a/modules/cmc-spring-sdk/pom.xml
+++ b/modules/cmc-spring-sdk/pom.xml
@@ -53,6 +53,14 @@
         </dependency>
 
         <dependency>
+            <groupId>com.lichbalab.cmc</groupId>
+            <artifactId>cmc-certificate-connect</artifactId>
+            <version>${project.version}</version>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
