SSL Bundles synchronization scheduler added, JUnit test adjustments and refactoring

--- a/modules/cmc-spring-sdk/src/test/resources/application.properties
+++ b/modules/cmc-spring-sdk/src/test/resources/application.properties
@@ -1,1 +1,4 @@
-#cmc.client.baseUrl=http://localhost:8080
+cmc.sdk.baseUrl=http://localhost:${TEST_CMC_API_PORT}
+cmc.sdk.sslBundleKeyAlias=lichbalab2.pem
+cmc.sdk.synchronisation.scheduling.cron=0 0 0 * * *
+cmc.sdk.clientAuth=${TEST_CMC_CLIENT_AUTH}
