SSL Bundles synchronization scheduler added configuration, JUnit test which checks its implementation

--- a/modules/cmc-spring-sdk/src/test/resources/application.properties
+++ b/modules/cmc-spring-sdk/src/test/resources/application.properties
@@ -1,4 +1,5 @@
 cmc.sdk.baseUrl=http://localhost:${TEST_CMC_API_PORT}
-cmc.sdk.sslBundleKeyAlias=lichbalab2.pem
-cmc.sdk.synchronisation.scheduling.cron=0 0 0 * * *
+cmc.sdk.sslBundleKeyAlias=${TEST_KEY_ALIAS}
+cmc.sdk.synchronisationSchedulingCron=${TEST_CMC_CRON}
 cmc.sdk.clientAuth=${TEST_CMC_CLIENT_AUTH}
+#logging.level.root=DEBUG
