SSL Bundles synchronization add for RestTemplate, JUnit tests added

--- a/modules/cmc-spring-sdk/src/test/resources/application.properties
+++ b/modules/cmc-spring-sdk/src/test/resources/application.properties
@@ -2,4 +2,5 @@ cmc.sdk.baseUrl=http://localhost:${TEST_CMC_API_PORT}
 cmc.sdk.sslBundleKeyAlias=${TEST_KEY_ALIAS}
 cmc.sdk.synchronisationSchedulingCron=${TEST_CMC_CRON}
 cmc.sdk.clientAuth=${TEST_CMC_CLIENT_AUTH}
+cmc.sdk.disableHostnameVerification=${TEST_DISABLE_HOSTNAME_VERIFICATION:false}
 #logging.level.root=DEBUG
