--- a/modules/cmc-spring-sdk/src/test/resources/application.properties
+++ b/modules/cmc-spring-sdk/src/test/resources/application.properties
@@ -1,6 +1,7 @@
-cmc.sdk.baseUrl=http://localhost:${TEST_CMC_API_PORT}
-cmc.sdk.sslBundleKeyAlias=${TEST_KEY_ALIAS}
-cmc.sdk.synchronisationSchedulingCron=${TEST_CMC_CRON}
-cmc.sdk.clientAuth=${TEST_CMC_CLIENT_AUTH}
-cmc.sdk.disableHostnameVerification=${TEST_DISABLE_HOSTNAME_VERIFICATION:false}
+spring.main.allow-bean-definition-overriding=true
+cmc.sdk.base-url=http://localhost:${TEST_CMC_API_PORT}
+cmc.sdk.ssl-bundle-key-alias=${TEST_KEY_ALIAS}
+cmc.sdk.synchronisation-scheduling-cron=${TEST_CMC_CRON}
+cmc.sdk.client-auth=${TEST_CMC_CLIENT_AUTH}
+cmc.sdk.disable-hostname-verification=${TEST_DISABLE_HOSTNAME_VERIFICATION:false}
 #logging.level.root=DEBUG
