cmc.sdk.enabled config property added

--- a/modules/cmc-spring-sdk/src/test/resources/application.properties
+++ b/modules/cmc-spring-sdk/src/test/resources/application.properties
@@ -4,6 +4,7 @@ cmc.sdk.ssl-bundle-key-alias=${TEST_KEY_ALIAS}
 cmc.sdk.synchronisation-scheduling-cron=${TEST_CMC_CRON}
 cmc.sdk.client-auth=${TEST_CMC_CLIENT_AUTH}
 cmc.sdk.disable-hostname-verification=${TEST_DISABLE_HOSTNAME_VERIFICATION:false}
+cmc.sdk.enabled=true
 #logging.level.root=DEBUG
 #server.shutdown=graceful
 #spring.lifecycle.timeout-per-shutdown-phase=30s
